Fixed bug where data tables were being stretched by its contents, if they’re larger

--- a/src/templates/assets/css/upstream.css
+++ b/src/templates/assets/css/upstream.css
@@ -101,6 +101,9 @@ table.dataTable.dtr-inline.collapsed > tbody > tr.parent > td:first-child::befor
   content: "\f054";
   background: none;
 }
+table.dataTable tr.child td.child {
+  white-space: normal;
+}
 
 /* Overview section */
 .count > small {
